# DrainYourKey

./: .gitignore  BananaPro_docs.md  Batch_docs.md  CLAUDE.md  CONTEXT.md  README.md  UI.html  Veo_docs.md  gemini3flash_docs.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  history.py  image.py  video.py
backend/app/services/: __init__.py  history_service.py  image_service.py  prompt_service.py  video_service.py
backend/app/utils/: __init__.py  error_utils.py  file_utils.py  retry.py
data/: history.json
devlogs/: 2026-01-30.md  2026-02-11.md  2026-02-28.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/common/: Button.jsx  FileUpload.jsx  NumberInput.jsx  Select.jsx
frontend/src/components/image/: ImageCard.jsx  ImageGallery.jsx  ImageJobCard.jsx  ImagePanel.jsx  ImagePreview.jsx  ReferenceImagesUpload.jsx
frontend/src/components/layout/: Header.jsx  Sidebar.jsx
frontend/src/components/modal/: PromptAssistModal.jsx
frontend/src/components/proImage/: ProImageGallery.jsx  ProImagePanel.jsx
frontend/src/components/video/: VideoCard.jsx  VideoGallery.jsx  VideoJobCard.jsx  VideoPanel.jsx  VideoPlayer.jsx  VideoPlayerModal.jsx
frontend/src/hooks/: useApi.js  useTheme.js
frontend/src/services/: api.js
